# shttp

./: .gitignore  README.md  cspell.json  pyproject.toml
shttp/: __main__.py
